--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "folio",
+  "name": "casa lari",
   "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config ./codegen.ts"
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "gsap": "^3.9.1",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.49.7",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/client-preset": "^2.1.1",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.9",
     "@types/node": "17.0.15",
     "@types/randomcolor": "^0.5.6",
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
+    "eslint-config-next": "^13.2.4",
     "framer-motion": "^6.2.8",
-    "typescript": "4.5.5"
+    "typescript": "^4.5.5"
   }
 }
